# SOMpp

./: .clang-format  .clang-tidy  .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .project  .travis.yml  CMakeLists.txt  IterativeFib.som  LICENSE  Makefile  MyTest.som  README  README.md  cppsom.sln  cppsom.vcproj  gc-comparison.data  getLibJitBuilder.sh  integration-tests.yml  lint.sh  rebench.conf  som.sh
.github/workflows/: ci.yml
Examples/Benchmarks/: All.som  Ball.som  Benchmark.som  Bounce.som  BubbleSort.som  Dispatch.som  Fibonacci.som  IntegerLoop.som  List.som  ListElement.som  Loop.som  Permute.som  Queens.som  QuickSort.som  Random.som  Recurse.som  Sieve.som  Sort.som  Storage.som  Sum.som  Towers.som  TowersDisk.som  TreeNode.som  TreeSort.som
Examples/Hello/: Hello.som
Examples/Snake/: Core.cpp  Terminal.h
Examples/StringTest/: StringTest.som
SOM.xcodeproj/: default.pbxuser  project.pbxproj
Smalltalk/: Array.som  BigInteger.som  Block.som  Block1.som  Block2.som  Block3.som  Boolean.som  Class.som  Dictionary.som  Double.som  False.som  Frame.som  HashEntry.som  Hashtable.som  Integer.som  Metaclass.som  Method.som  Nil.som  Object.som  Pair.som  Primitive.som  Set.som  String.som  Symbol.som  System.som  True.som  Vector.som
TestSuite/: ArrayTest.som  BigIntegerTest.som  ClosureTest.som  CoercionTest.som  CompilerReturnTest.som  DoubleTest.som  EmptyTest.som  HashTest.som  IntegerTest.som  ObjectSizeTest.som  PreliminaryTest.som  ReflectionTest.som  SelfBlockTest.som  SuperTest.som  SuperTestSuperClass.som  SymbolTest.som  TestHarness.som
doc/: styleguide.tex  tab.c
gperftools-2.0/: libtool
omrglue/: BytecodeHelper.cpp  BytecodeHelper.hpp  CollectorLanguageInterfaceImpl.cpp  CollectorLanguageInterfaceImpl.hpp  ConfigurationLanguageInterfaceImpl.cpp  ConfigurationLanguageInterfaceImpl.hpp  EnvironmentDelegate.cpp  EnvironmentLanguageInterfaceImpl.cpp  EnvironmentLanguageInterfaceImpl.hpp  GlobalCollectorDelegate.hpp  LanguageThreadLocalHeap.hpp  LanguageThreadLocalHeapStruct.h  LanguageVMGlue.c  MarkingDelegate.cpp  MarkingDelegate.hpp  MixedObjectScanner.hpp  Object.hpp  ObjectAllocationModel.hpp  ObjectIterator.hpp  ObjectModel.cpp  ObjectModel.hpp  ObjectModelDelegate.hpp  Profiling.cpp  Profiling.h  SOMppMethod.cpp  SOMppMethod.hpp  StartupManagerImpl.cpp  StartupManagerImpl.hpp  VerboseManagerImpl.cpp  objectdescription.h
omrglue/configure_includes/: configure_linux_x86.mk
scripts/: Benchmark.py  BenchmarkRunner.py  allocation_statistics_no_template.gpl  allocation_statistics_size_template.gpl  build_all.sh  create_plots.py  create_plots.sh  gc_times_gcbench.gp  gc_times_richards.gp  gc_times_som.gp  gcbench_additional_allocation.gp  gcbench_bad_cache.gp  gcbench_bad_cache_generational.gp  gcbench_bad_cache_mark.gp  gcbench_no_cache.gp  gcbench_with_cache.gp  generate_allocation_statistics.py  integer_histogram_gcbench.gp  integer_histogram_richards.gp  integer_histogram_som.gp  merge_csv.py  prepare_gc_csv.py  receiver_types_gcbench.gp  receiver_types_richards.gp  receiver_types_som.gp  richards_benchmark_additional_allocation.gp  richards_benchmark_bad_cache.gp  richards_benchmark_bad_cache_generational.gp  richards_benchmark_bad_cache_mark.gp  richards_benchmark_no_cache.gp  richards_benchmark_with_cache.gp  run_benchmarks.py  send_types_gcbench.gp  send_types_richards.gp  send_types_som.gp  som_benchmarks_additional_allocation.gp  som_benchmarks_bad_cache.gp  som_benchmarks_bad_cache_generational.gp  som_benchmarks_bad_cache_mark.gp  som_benchmarks_no_cache.gp  (+1 more)
src/: Main.cpp  cppsom_dll.vcproj
src/compiler/: BytecodeGenerator.cpp  BytecodeGenerator.h  ClassGenerationContext.cpp  ClassGenerationContext.h  Disassembler.cpp  Disassembler.h  Lexer.cpp  Lexer.h  LexicalScope.cpp  LexicalScope.h  MethodGenerationContext.cpp  MethodGenerationContext.h  Parser.cpp  Parser.h  SourceCoordinate.h  SourcecodeCompiler.cpp  SourcecodeCompiler.h  Variable.cpp  Variable.h
src/interpreter/: Interpreter.cpp  Interpreter.h  Interpreter.inline.h  InterpreterLoop.h  bytecodes.cpp  bytecodes.h
src/jit/: SOMppMethod.cpp  SOMppMethod.hpp  SOMppMethod_with_vm_state.cpp  SOMppMethod_with_vm_state.hpp
src/lib/: InfInt.h
src/memory/: BaseThread.cpp  BaseThread.h  CopyingCollector.cpp  CopyingCollector.h  CopyingHeap.cpp  CopyingHeap.h  CopyingPage.h  DebugCopyingCollector.cpp  DebugCopyingCollector.h  DebugCopyingHeap.cpp  DebugCopyingHeap.h  GarbageCollector.cpp  GarbageCollector.h  GenerationalCollector.cpp  GenerationalCollector.h  GenerationalHeap.cpp  GenerationalHeap.h  GenerationalPage.h  Heap.cpp  Heap.h  MarkSweepCollector.cpp  MarkSweepCollector.h  MarkSweepHeap.cpp  MarkSweepHeap.h  MarkSweepPage.h  OMRCollector.cpp  OMRCollector.h  OMRHeap.cpp  OMRHeap.h  Page.cpp  Page.h  PagedHeap.cpp  PagedHeap.h  PauselessCollector.cpp  PauselessCollector.h  PauselessCollectorThread.cpp  PauselessCollectorThread.h  PauselessHeap.cpp  PauselessHeap.h  PauselessPage.cpp  (+7 more)
src/misc/: ExtendedList.h  HashMap.h.bak  Hasher.cpp  Hasher.h  Murmur3Hash.cpp  Murmur3Hash.h  ParseInteger.cpp  ParseInteger.h  SpinLock.h  StringUtil.h  Timer.cpp  Timer.h  VectorUtil.h  debug.cpp  debug.h  defs.h  gettimeofday.h
src/natives/: VMMutex.cpp  VMMutex.h  VMSignal.cpp  VMSignal.h  VMThread.cpp  VMThread.h
src/primitives/: Array.cpp  Array.h  BigInteger.cpp  BigInteger.h  Block.cpp  Block.h  Class.cpp  Class.h  Condition.cpp  Condition.h  Core.cpp  Core.h  Delay.cpp  Delay.h  Double.cpp  Double.h  Integer.cpp  Integer.h  Method.cpp  Method.h  Mutex.cpp  Mutex.h  Object.cpp  Object.h  Primitive.cpp  Primitive.h  SOMString.cpp  Signal.cpp  Signal.h  String.cpp  String.h  Symbol.cpp  Symbol.h  System.cpp  System.h  Thread.cpp  Thread.h  Vector.cpp  Vector.h
src/primitivesCore/: PrimitiveContainer.cpp  PrimitiveContainer.h  PrimitiveLoader.cpp  PrimitiveLoader.h  Primitives.h  Routine.h
src/unitTests/: BasicInterpreterTests.h  BytecodeGenerationTest.cpp  BytecodeGenerationTest.h  CloneObjectsTest.cpp  CloneObjectsTest.h  HashingTest.cpp  HashingTest.h  (+17 more)
(+100 files in other folders)
